--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,13 @@
 language: go
 
 go:
-  - 1.2
-  - 1.3
-  - 1.4
-  - 1.5
-  - 1.6
-  - 1.7
-  - 1.8
-  - 1.9
-  - master
+  - "1.13"
+  - tip
 
-# safelist
-branches:
-  only:
-  - master
-  - v2
+go_import_path: github.com/Shopify/gomail
 
-notifications:
-  email: false
+script:
+  - make coverage
 
-before_install:
-  - mkdir -p $GOPATH/src/gopkg.in &&
-    ln -s ../github.com/go-mail/mail $GOPATH/src/gopkg.in/mail.v2
+after_success:
+  - if [[ -f "coverage.txt" ]]; then bash <(curl -s https://codecov.io/bash); fi
