--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,15 +19,14 @@ linters:
     - gocritic
     - gofmt
     - goimports
-    - golint
     - gosec
     - govet
     - lll
-    - maligned
     - megacheck
     - misspell
     - nakedret
     - prealloc
+    - revive
     - stylecheck
     - unconvert
     - unparam
@@ -40,16 +39,8 @@ linters-settings:
   goconst:
     min-len: 2
     min-occurrences: 2
-  goimports:
-    # put imports beginning with prefix after 3rd-party packages;
-    # it's a comma-separated list of prefixes
-    local-prefixes: github.com/Shopify/goose
-  golint:
-    min-confidence: 0
   lll:
     line-length: 140
-  maligned:
-    suggest-new: true
 
 issues:
   exclude-rules:
