--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-
 # Binaries for programs and plugins
 *.exe
 *.dll
@@ -12,6 +10,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-
 # IDE's
 .idea/
+.vscode/
+
+vendor/
+bin/
