--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,10 +2,13 @@
 
 run:
   timeout: 5m
-
   skip-files:
     - ".*_mock\\.go$"
     - "\\.pb\\.go$"
+  skip-dirs:
+    - bin
+    - .github
+    - tools
 
 output:
   # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
